--- a/Preventigo/company.html
+++ b/Preventigo/company.html
@@ -36,12 +36,10 @@
             </div>
         </div>
     </header>
-    <img src="IMAGES/burger-menu.png" class="burger menu-display" onclick="showMenu()">
-    <img src="IMAGES/close.png" class="close no-menu-display" onclick="showMenu()">
     <section class="container-fluid navigation-header">
         <div class="row wrapper">
             <p class="logo col-sm-2 col-xs-12">
-                <img src="IMAGES/logo.png">
+                <img src="IMAGES/logos.png">
             </p>
         </div>
     </section>
@@ -59,10 +57,10 @@
                     </ul>
                 </div>
                 <div class="col-md-3 btns">
-                <button class="btn btn-primary" type="button" id="getJsonSrc">See Details</button>
-                <button class="btn btn-primary" type="button" id="getJsonSrc">Edit Details</button>
-                    </div>
+                    <button class="btn btn-primary" type="button" id="getJsonSrc">See Details</button>
+                    <button class="btn btn-primary" type="button" id="getJsonSrc">Edit Details</button>
                 </div>
+            </div>
             <div class="row dating">
                 <h2>Search  by:</h2>
                 <form id="search" role="form" style="border:0">
@@ -208,11 +206,36 @@
                             </li>
                         </ul>
                     </div>
+
                 </form>
             </div>
+            <button type="submit" class="btn btn-primary add">Add Product</button>
+            <button type="submit" class="btn btn-primary add">Extra Button 1</button>
+            <button type="submit" class="btn btn-primary add">Extra Button 2</button>
+            <button type="submit" class="btn btn-primary add">Extra Button 3</button>
         </div>
-    </section>
-    <section class="foot">
+        </section>
+        <div class="col-xs-12 contain">
+            <ul class="menu-items">
+                <li class="active">Rows for Internal Work</li>
+            </ul>
+            <div class="rows">
+                <p>
+                    Stay connected either on the phone or the Web with the Galaxy S4 I337 from Samsung. With 16 GB of memory and a 4G connection, this phone stores precious photos and video and lets you upload them to a cloud or social network at blinding-fast speed. With a 17-hour operating life from one charge, this phone allows you keep in touch even on the go. With its built-in photo editor, the Galaxy S4 allows you to edit photos with the touch of a finger, eliminating extraneous background items. Usable with most carriers, this smartphone is the perfect companion for work or entertainment.
+                </p>
+            </div>
+        </div>
+        <div class="col-xs-12 contain">
+            <ul class="menu-items">
+                <li class="active">Rows for Internal Work</li>
+            </ul>
+            <div class="rows">
+                <p>
+                    Stay connected either on the phone or the Web with the Galaxy S4 I337 from Samsung. With 16 GB of memory and a 4G connection, this phone stores precious photos and video and lets you upload them to a cloud or social network at blinding-fast speed. With a 17-hour operating life from one charge, this phone allows you keep in touch even on the go. With its built-in photo editor, the Galaxy S4 allows you to edit photos with the touch of a finger, eliminating extraneous background items. Usable with most carriers, this smartphone is the perfect companion for work or entertainment.
+                </p>
+            </div>
+        </div>
+     <section style="clear: both;">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <div class="col-md-12 social-icons">
             <ul class="social-network social-circle">
@@ -222,7 +245,7 @@
                 <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
                 <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
             </ul>
-            <p>copyright&copy Preventigo 2017. All rights reserved.</p>
+             <p>copyright&copy Preventigo 2017. All rights reserved.</p>
         </div>
     </section>
     <script src="JS/dropdown.js"></script>
