--- a/Preventigo/search-product.html
+++ b/Preventigo/search-product.html
@@ -40,7 +40,7 @@
     </header>
     <section class="container-fluid navigation-header">
         <div class="row wrapper">
-            <p class="logo col-lg-6 col-xs-6"><img src="IMAGES/logo.png">
+            <p class="logo col-lg-6 col-xs-6"><img src="IMAGES/logos.png">
             </p>
         </div>
     </section>
@@ -88,7 +88,7 @@
     </div>
   </section>
   <script src="JS/custom-file-input.js"></script>
-    <section>
+    <section style="clear:both;">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <div class="col-md-12 social-icons">
             <ul class="social-network social-circle">
