--- a/Preventigo/product-detail.html
+++ b/Preventigo/product-detail.html
@@ -14,7 +14,7 @@
 <html>
 
 <body>
-     <header class="container-fluid" id="home">
+    <header class="container-fluid" id="home">
         <div class="wrapper row">
             <h4 class="col-xs-12 col-sm-6">Welcome To Our <span>Company</span></h4>
             <div class="social-network col-xs-12 col-sm-6">
@@ -47,18 +47,46 @@
     </section>
     <div class="container all-data">
         <div class="row">
-            <div class="col-xs-12 col-md-12 item-photo">
-                <img src="IMAGES/shoe.jpg" />
+            <div class="container">
+                <h2>Product Details</h2>
+                <div id="myCarousel" class="carousel slide  pro-img" data-ride="carousel">
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="IMAGES/shoe.jpg" alt="Los Angeles">
+                        </div>
+
+                        <div class="item">
+                            <img src="IMAGES/shoe.jpg" alt="Chicago">
+                        </div>
+
+                        <div class="item">
+                            <img src="IMAGES/shoe.jpg" alt="New york">
+                        </div>
+                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
-            <div class="col-xs-12" style="border:0px solid gray">
+            <div class="col-xs-12" style="border:0px solid gray; margin-top: 100px;">
                 <h3>PUMA shoes</h3>
                 <h5 style="color:#337ab7">Model Name:<a href="#"> Puma</a> · <small style="color:#337ab7">(5054 PUMA)</small></h5>
                 <h6 class="title-price"><small>PRICE</small></h6>
                 <h3 style="margin-top:0px;">RS.1399</h3>
                 <div>
                     <div>
-                      <p>Product Quality: Excellent</p><br>
-                        <p>Product ID: 123456</p><br>
+                        <p>Product Quality: Excellent</p>
+                        <br>
+                        <p>Product ID: 123456</p>
+                        <br>
                         <p>Product ratings: 3/5</p>
                     </div>
                 </div>
@@ -73,20 +101,28 @@
                 </ul>
                 <div style="width:100%; border-top:1px solid silver">
                     <p>
-                            Stay connected either on the phone or the Web with the Galaxy S4 I337 from Samsung. With 16 GB of memory and a 4G connection, this phone stores precious photos and video and lets you upload them to a cloud or social network at blinding-fast speed. With a 17-hour operating life from one charge, this phone allows you keep in touch even on the go. 
-        
-                            With its built-in photo editor, the Galaxy S4 allows you to edit photos with the touch of a finger, eliminating extraneous background items. Usable with most carriers, this smartphone is the perfect companion for work or entertainment.
+                        Stay connected either on the phone or the Web with the Galaxy S4 I337 from Samsung. With 16 GB of memory and a 4G connection, this phone stores precious photos and video and lets you upload them to a cloud or social network at blinding-fast speed. With a 17-hour operating life from one charge, this phone allows you keep in touch even on the go. With its built-in photo editor, the Galaxy S4 allows you to edit photos with the touch of a finger, eliminating extraneous background items. Usable with most carriers, this smartphone is the perfect companion for work or entertainment.
+                    </p>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <ul class="menu-items">
+                    <li class="active">Reviews from our clients</li>
+                </ul>
+                <div style="width:100%; border-top:1px solid silver">
+                    <p>
+                        Stay connected either on the phone or the Web with the Galaxy S4 I337 from Samsung. With 16 GB of memory and a 4G connection, this phone stores precious photos and video and lets you upload them to a cloud or social network at blinding-fast speed. With a 17-hour operating life from one charge, this phone allows you keep in touch even on the go. With its built-in photo editor, the Galaxy S4 allows you to edit photos with the touch of a finger, eliminating extraneous background items. Usable with most carriers, this smartphone is the perfect companion for work or entertainment.
                     </p>
                 </div>
             </div>
             <div class="rate col-xs-12">
-             <input class="form-control rate-box" type="text" placeholder="Enter your ratings"/>
-                <input class="form-control review-box" type="text" placeholder="Write your Reviews"/>
+                <input class="form-control rate-box" type="text" placeholder="Enter your ratings" />
+                <input class="form-control review-box" type="text" placeholder="Write your Reviews" />
                 <button type="submit" class="btn btn-primary">Submit Feedback</button>
             </div>
         </div>
     </div>
-     <section>
+    <section>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <div class="col-md-12 social-icons">
             <ul class="social-network social-circle">
