--- a/Preventigo/service-details.html
+++ b/Preventigo/service-details.html
@@ -36,12 +36,12 @@
     </header>
     <section class="container-fluid navigation-header">
         <div class="row wrapper">
-            <p class="logo col-lg-6 col-xs-6"><img src="IMAGES/logo.png">
+            <p class="logo col-lg-6 col-xs-6"><img src="IMAGES/logos.png">
             </p>
         </div>
     </section>
     <h1 class="col-xs-12">Services Description</h1>
-    <div class="container">
+    <div class="container bag">
         <div class="row">
             <div class="card col-sm-12 col-md-12 col-xs-12 box">
                 <div class="col-sm-4 col-md-4 col-xs-12">
